# ai-pdf-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
src/pdf_assistant/: __init__.py  api.py  chunker.py  config.py  embeddings.py  errors.py  extractor.py  factory.py  llm.py  logging_config.py  pipeline.py  prompts.py  vector_store.py
tests/: conftest.py  test_chunker.py  test_config.py  test_errors.py  test_pipeline.py
